// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupComplete renders correctly if backup completed 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingBottom": 60,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/shiny-gold.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 75,
            "marginBottom": 20,
            "width": 75,
          }
        }
      >
        dontLoseIt
      </Text>
      <View
        accessible={true}
        hitSlop={
          Object {
            "color": "#2E3338",
            "paddingTop": 25,
          },
        ]
      }
    >
      bothBackupsDone.0
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          done
        </Text>
      </View>
    </View>
  </View>
</SafeAreaView>
`;

exports[`BackupComplete renders correctly if backup not completed 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
        "paddingHorizontal": 20,
        "paddingTop": 40,
      }
    >
      bothBackupsDone.1
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "flexDirection": "row",
        },
        null,
        null,
        undefined,
        Object {
          "backgroundColor": "#42D689",
        },
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackground",
          "type": "ThemeAttrAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#42D689",
          "borderWidth": 0,
          "flex": 1,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-SemiBold",
                "fontSize": 16,
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {
                "paddingLeft": 5,
                "paddingRight": 5,
              },
            ]
          }
        >
          done
        </Text>
      </View>
    </View>
  </View>
</SafeAreaView>
`;
